--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.4"
 services:
   api:
-    image: ghcr.io/<yourgithubaccount>/fabrikam-api:main
+    image: ghcr.io/eddyv73/fabrikam-api:main
     ports:
       - "3001:3001"
 
   web:
-    image: ghcr.io/<yourgithubaccount>/fabrikam-web:main
+    image: ghcr.io/eddyv73/fabrikam-web:main
     depends_on:
         - api
     environment:
