--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,9 +9,11 @@ on:
   schedule:
     - cron: '40 18 * * *'
   push:
-    branches: [ main ]
+    branches-ignore:    # <-- Add this list property
+      - '**'  
+    #branches: [ main ]
     # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    # tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ main ]
 
